--- a/public/html/javascript.html
+++ b/public/html/javascript.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JavaScript | Creative Journey</title>
 
-        <link rel="stylesheet" href="../styles.css" />
+        <link rel="stylesheet" href="../../styles.css"/>
         <!-- Font Awesome -->
         <link
           rel="stylesheet"
