--- a/public/html/javascript.html
+++ b/public/html/javascript.html
@@ -17,15 +17,53 @@
     </head>
 
     <body>
-        <header id="header">
-            <nav class="menu">
-              <li class="link">JavaScript</li>
-              <li class="link">React</li>
-              <li class="link">Node Js</li>
-              <li class="link">TypeScript</li>
-              <li class="link">Three Js</li>
-            </nav>
-        </header>
+      <header id="header">
+        <nav class="menu">
+          <div class="grid-left">
+            <li class="link">
+              <a href="../../index.html">🦜</a>
+            </li>
+          </div>
+  
+          <div class="grid-right">
+            <li class="link-courses">
+              <a href="public/javascript.html">
+                JavaScript
+              </a>
+            </li>
+  
+            <li class="link-courses">
+              <a href="public/react.html">
+                React
+              </a>
+            </li>
+  
+            <li class="link-courses">
+              <a href="public/nodejs.html">
+                Node Js
+              </a>
+            </li>
+  
+            <li class="link-courses">
+              <a href="public/typescript.html">
+                TypeScript
+              </a>
+            </li>
+  
+            <li class="link-courses">
+              <a href="public/figma.html">
+                Figma
+              </a>
+            </li>
+  
+            <li class="link-courses">
+              <a href="public/threejs.html">
+                Three Js
+              </a>
+            </li>
+          </div>
+        </nav>
+      </header>
 
         <main>
           <section id="hero-section">
