📒 Adding JavaScript files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="grid-right">
           <li class="link-courses">
-            <a href="public/javascript.html">
+            <a href="public/javascript/javascript.html">
               JavaScript
             </a>
           </li>
